--- a/pyfoto/static/css/pyfoto.css
+++ b/pyfoto/static/css/pyfoto.css
@@ -2,15 +2,53 @@ html {
     height: 100%;
     width: 100%;
     overflow: hidden;
+
 }
 
 body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    background: #122b40;
 }
 
 
 .main-area {
     text-align: center;
+        width: 100%;
+    height: 100%;
+}
+
+.the-image {
+    min-width: 300px;
+    max-width:100%;
+    max-height: 100%;
+}
+
+.tag {
+    background: #999;
+    -moz-border-radius:5px;
+    border-radius:5px;
+    padding: 1px 4px;
+    margin: 3px;
+}
+
+.add-tag {
+    position: absolute;
+    bottom: 0;
+    
+}
+
+.left-side {
+    height: 100%;
+}
+
+.header {
+    color: white;
+    margin: 5px;
+}
+
+.tag-cloud {
+    width: 100%;
+    word-wrap: normal;
 }
