--- a/pyfoto/static/css/pyfoto.css
+++ b/pyfoto/static/css/pyfoto.css
@@ -21,7 +21,7 @@ body {
 
 .the-image {
     min-width: 300px;
-    max-width:100%;
+    max-width: 100%;
     max-height: 100%;
 }
 
@@ -78,4 +78,5 @@ body {
 }
 
 .main-image {
+    height: 100%;
 }
