--- a/pyfoto/static/css/pyfoto.css
+++ b/pyfoto/static/css/pyfoto.css
@@ -26,8 +26,10 @@ body {
 }
 
 .image-data{
-    margin: 0;
-    padding: 0;
+    border-top: #fff 1px solid;
+    margin: 10px 0 0 0;
+    padding: 5px 0 0 0;
+
 }
 
 .tag {
@@ -79,4 +81,65 @@ body {
 
 .main-image {
     height: 100%;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.current-search {
+    color: #fff;
+    margin-top: 5px;
+}
+
+.back-to-search {
+    color: #fff;
+    cursor: pointer;
+    margin-bottom: 5px;
+}
+
+.left-image {
+    background: #000;
+    height: 100%;
+    opacity: 0.0;
+    color: #fff;
+    font-size: 44px;
+    align-content: center;
+    display: -webkit-flexbox;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.left-image:hover {
+    opacity: .5;
+    cursor: pointer;
+}
+
+.right-image {
+    background: #000;
+    height: 100%;
+    opacity: 0.0;
+    color: #fff;
+    font-size: 44px;
+    align-content: center;
+    display: -webkit-flexbox;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.right-image:hover {
+    opacity: .5;
+    cursor: pointer;
 }
