Updating Load More at bottom to look better and be more usable

--- a/pyfoto/static/css/pyfoto.css
+++ b/pyfoto/static/css/pyfoto.css
@@ -148,7 +148,13 @@ body {
 
 .more-footer {
     text-align: center;
-
+    height: 50px;
+    width: 100%;
+    background: #000;
+    opacity: .5;
+    cursor: pointer;
+    color: #fff;
+    font-size: 24px;
 }
 
 .image-details{
