--- a/pyfoto/templates/gallery.html
+++ b/pyfoto/templates/gallery.html
@@ -21,7 +21,7 @@
     <div class="tag-cloud">
         <h4 class="header">Search Tags</h4>
         <a ng-repeat="tag in globals.tags" href="#/search/?tags={{tag.tag}}" >
-            <span class="tag" >{{tag.tag}}</span>
+            <span class="tag"  ng-class="{highlight: tag.highlight==true}" >{{tag.tag}}</span>
         </a>
     </div>
 
