--- a/pyfoto/templates/image.html
+++ b/pyfoto/templates/image.html
@@ -1,6 +1,6 @@
 <div class="col-lg-10 col-sm-10 col-md-10 left-side">
-    <div class="main-image"
-         ng-style="{'background-image': 'url(/item/' + currentImage + ')'}">
+    <!--- ng-style="{'background-image': 'url(/item/' + image_info.path + ')'}"--->
+    <div class="main-image">
 
         <div class="col-md-1 left-image" ng-click="prevItem()">
             <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
@@ -31,12 +31,12 @@
 
                     <div class="filename">
                         <div class="show-filename" ng-click="showFilename = ! showFilename"
-                               ng-show="showFilename" >{{currentName}}</div>
+                               ng-show="showFilename" >{{image_info.name}}</div>
                         <form style="color:black;" ng-show="! showFilename"
                               class="form-inline">
                             <div class="form-group">
                                 <label class="sr-only" for="changeFilename">Filename</label>
-                                <input   id="changeFilename" type="text" ng-model="newName" name="filename" placeholder="{{currentName}}"  />
+                                <input   id="changeFilename" type="text" ng-model="newName" name="filename" placeholder="{{image_info.name}}"  />
                             </div>
                             <button ng-click="updateFilename()" class="btn btn-primary">Save</button>
                             <button ng-click="showFilename = ! showFilename" class="btn btn-danger">Cancel</button>
@@ -44,7 +44,7 @@
                     </div>
 
 
-                    <a href="/item/{{currentImage}}" download="{{currentFilename}}" >Download</a> |
+                    <a href="/item/{{image_info.path}}" download="{{image_info.name}}" >Download</a> |
                     <a href="#" style="color: red;" ng-click="deleteImage()">Delete</a>&nbsp;&nbsp;&nbsp;
                 </div>
 
