--- a/pyfoto/templates/index.html
+++ b/pyfoto/templates/index.html
@@ -10,11 +10,10 @@
 
   <body ng-app="pyfotoApp">
 
-    <div class="container">
-        <div class="row">
-            <div ng-view></div>
+        <div class="main-area full-scale">
+            <div ng-view class="full-scale">  </div>
         </div>
-    </div>
+
         <script src="/static/js/jquery-2.1.4.js"></script>
         <script src="/static/js/angular.js"></script>
         <script src="/static/js/angular-route.min.js"></script>
