untagged highlighting now works properly for images.

--- a/pyfoto/templates/image.html
+++ b/pyfoto/templates/image.html
@@ -22,7 +22,8 @@
                 <div class="image-controls">
                     <span title="Play" ng-click="scrollOn(); scrolling=true;" ng-hide="scrolling==true"
                           class="glyphicon glyphicon-play point" ></span>
-                    <span title="Stop" ng-click="scrollOff(); scrolling=false" ng-hide="scrolling==false"
+                    <span title="Stop" ng-click="scrollOff(); scrolling=false"
+                          ng-hide="scrolling==false || scrolling==undefined"
                           class="glyphicon glyphicon-stop point" ></span>
                 </div>
                     <div class="star-rating" star-rating rating-value="rating"
