Adding search start at location, as well as re-working 'load more'

--- a/pyfoto/templates/search.html
+++ b/pyfoto/templates/search.html
@@ -1,4 +1,4 @@
-<a class="back-to-search" href="#/search?{{get_filters}}" ng-show="current_page != 'search'">
+<a class="back-to-search" href="#/search?{{get_filters}}&start_at={{image_id}}" ng-show="current_page != 'search'">
     <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span> Back to Search
 </a>
 
