Adding ability to delete tag. Working add tag through workaround.

--- a/pyfoto/templates/image.html
+++ b/pyfoto/templates/image.html
@@ -60,7 +60,7 @@
                             <label class="sr-only" for="tagInput">Name</label>
                             <input id="tagInput" ng-model="tagInput" type="text" placeholder="New Tag" />
                          </div>
-                        <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
+                        <input class="btn btn-default" type="submit" value="Tag" style="height: 28px;"/>
                     </form>
                 </div>
             </div>
