--- a/pyfoto/static/css/pyfoto.css
+++ b/pyfoto/static/css/pyfoto.css
@@ -2,7 +2,6 @@ html {
     height: 100%;
     width: 100%;
     overflow: hidden;
-
 }
 
 body {
@@ -49,6 +48,12 @@ body {
 }
 
 .add-tag {
+    position: absolute;
+    bottom: 5px;
+    width: 100%;
+}
+
+.count {
     position: absolute;
     bottom: 5px;
     width: 100%;
