--- a/pyfoto/templates/gallery.html
+++ b/pyfoto/templates/gallery.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="count" style="color:white;">
-        Showing <span ng-bind="galleryImages.length"></span> images
+        Showing <span ng-bind="galleryImages.length"></span> of <span ng-bind="totalItems"></span>
     </div>
 
 </div>
