--- a/pyfoto/static/css/pyfoto.css
+++ b/pyfoto/static/css/pyfoto.css
@@ -11,11 +11,29 @@ body {
     background: #333;
 }
 
+.header-bar {
+    width: 100%;
+    height: 40px;
+    background: #1b6d85;
+    margin-bottom: 2px;
+}
 
 .main-area {
     text-align: center;
-        width: 100%;
-    height: 100%;
+    width: 100%;
+}
+
+.site-title {
+    padding: 5px 5px;
+    font-size: 18px;
+    color: white;
+    width: 75px;
+    float: left;
+}
+
+.site-title a{
+    color: white;
+    text-decoration: none;
 }
 
 .the-image {
@@ -78,7 +96,9 @@ body {
 .gallery {
     margin:0;
     padding:0;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 40px;
     overflow-y: scroll;
 }
 
