--- a/pyfoto/templates/index.html
+++ b/pyfoto/templates/index.html
@@ -8,6 +8,20 @@
 </head>
 
   <body ng-app="pyfotoApp">
+        <div class="header-bar">
+            <div class="site-title"><a href="/">PyFoto</a></div>
+
+            <div>
+                <form ng-submit="performSearch(searchInput)" class="perform-search form-inline">
+                     <div class="form-group">
+                        <label class="sr-only" for="searchInput">search</label>
+                        <input id="searchInput" ng-model="searchInput" type="text"
+                               placeholder="Search" />
+                     </div>
+                    <input class="hidden-submit" type="submit" />
+                </form>
+            </div>
+        </div>
 
         <div class="main-area full-scale">
             <div ng-view class="full-scale">  </div>
