--- a/pyfoto/templates/image.html
+++ b/pyfoto/templates/image.html
@@ -20,7 +20,7 @@
 
     <div class="col-lg-2 col-sm-2 col-md-2 right-side" >
 
-        <div class="search-area" ng-controller="searchController" ng-include="'search.html'">
+        <div class="search-area" ng-include="'search.html'">
         </div>
         <div class="image-data" >
             <div class="image-details">
