--- a/pyfoto/templates/gallery.html
+++ b/pyfoto/templates/gallery.html
@@ -13,7 +13,7 @@
 
 <div class="col-lg-2 col-sm-2 col-md-2 right-side" >
 
-    <div class="search-area" ng-controller="searchController" ng-include="'search.html'">
+    <div class="search-area" ng-include="'search.html'">
     </div>
 
     <div class="star-rating" star-rating rating-value="searchRating"
