--- a/pyfoto/templates/index.html
+++ b/pyfoto/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 
   <body ng-app="pyfotoApp">
-        <div class="header-bar">
+        <div class="header-bar" ng-hide="hideHeader">
             <div class="site-title"><a href="/">PyFoto</a></div>
 
             <div class="user-menu glyphicon glyphicon-menu-hamburger"></div>
