--- a/pyfoto/static/css/pyfoto.css
+++ b/pyfoto/static/css/pyfoto.css
@@ -13,7 +13,7 @@ body {
 
 .header-bar {
     width: 100%;
-    height: 40px;
+    height: 42px;
     background: #1b6d85;
     margin-bottom: 2px;
 }
@@ -102,7 +102,7 @@ body {
     padding:0;
     position: absolute;
     top: 0;
-    bottom: 40px;
+    bottom: 42px;
     overflow-y: auto;
 }
 
@@ -111,7 +111,6 @@ body {
 }
 
 .user-menu {
-    padding: 5px 5px;
     float: right;
     width: 50px;
     height: 40px;
@@ -124,9 +123,10 @@ body {
 
 .perform-search{
     float: right;
-    width: 200px;
+    width: 240px;
     height: 40px;
     padding: 5px 5px;
+    margin-right: 60px;
 }
 
 .contain {
@@ -267,10 +267,16 @@ ul.rating {
 .full-scale {
     width: 100%;
     height: 100%;
+    overflow: scroll;
 }
 
 .alt-view {
     overflow-x: auto;
     overflow-y: auto;
     cursor: zoom-out;
+}
+
+.user-menu-button{
+    float: right;
+
 }
