--- a/pyfoto/templates/gallery.html
+++ b/pyfoto/templates/gallery.html
@@ -1,12 +1,18 @@
 <div class="col-lg-10 col-sm-10 col-md-10 left-side">
     <div class="gallery">
     <div class="more-area col-md-12" ng-click="prevPage()" ng-class="{hidden: loadPrevHidden}">Load Previous</div>
-    <a href="#/image/{{image.id}}?{{get_filters}}" ng-repeat="image in galleryImages">
+    <a href="#/image/{{image.id}}?{{get_filters}}" ng-repeat="image in galleryImages" ng-hide="albumMode">
         <div class="gallery-image"
              ng-style="{'background-image': 'url(/item/' + image.thumbnail + ')'}"
              ng-click="openImage(image.id)">
         </div>
     </a>
+    <div ng-repeat="image in galleryImages" ng-show="albumMode">
+        <div class="gallery-image"
+             ng-style="{'background-image': 'url(/item/' + image.thumbnail + ')'}"
+             ng-click="openImage(image.id)">
+        </div>
+    </div>
     <div class="more-area col-md-12" ng-click="nextPage()" ng-class="{hidden: loadMoreHidden}">Load More</div>
     </div>
 </div>
