--- a/pyfoto/static/css/pyfoto.css
+++ b/pyfoto/static/css/pyfoto.css
@@ -21,6 +21,7 @@ body {
 .main-area {
     text-align: center;
     width: 100%;
+    height: 100%;
 }
 
 .site-title {
@@ -100,9 +101,8 @@ body {
 .gallery {
     margin:0;
     padding:0;
-    position: absolute;
-    top: 0;
-    bottom: 42px;
+    width: 100%;
+    height: 100%;
     overflow-y: auto;
 }
 
@@ -267,7 +267,13 @@ ul.rating {
 .full-scale {
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
+}
+
+.fscale{
+    height: calc(100% - 42px);
+   width: 100%;
+    overflow: hidden;
 }
 
 .alt-view {
@@ -279,4 +285,10 @@ ul.rating {
 .user-menu-button{
     float: right;
 
+}
+
+.iselected{
+    border: solid 2px deepskyblue;
+}
+.album-image{
 }
