--- a/pyfoto/templates/forbidden.html
+++ b/pyfoto/templates/forbidden.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="3; url=/template/index.html#/login" />
     <title>Title</title>
 </head>
 <body>
