--- a/pyfoto/templates/index.html
+++ b/pyfoto/templates/index.html
@@ -5,9 +5,14 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/static/css/pyfoto.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-switch.min.css">
 </head>
 
   <body ng-app="pyfotoApp">
+
+
+        <div class="main-area full-scale">
+
         <div class="header-bar" ng-hide="hideHeader">
             <div class="site-title"><a href="/">PyFoto</a></div>
 
@@ -38,14 +43,14 @@
 
         </div>
 
-        <div class="main-area full-scale">
-            <div ng-view class="full-scale">  </div>
+            <div ng-view class="fscale">  </div>
         </div>
 
         <script src="/static/js/jquery-2.1.4.js"></script>
         <script src="/static/js/angular.js"></script>
         <script src="/static/js/angular-route.min.js"></script>
         <script src="/static/js/bootstrap.js"></script>
+        <script src="/static/js/bootstrap-switch.min.js"></script>
         <script src="/static/js/pyfoto.js"></script>
   </body>
 
