More broken, but more options

--- a/pyfoto/templates/index.html
+++ b/pyfoto/templates/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/static/css/pyfoto.css">
     <link rel="stylesheet" href="/static/css/bootstrap-switch.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-slider.min.css">
 </head>
 
   <body ng-app="pyfotoApp">
@@ -51,6 +52,9 @@
         <script src="/static/js/angular-route.min.js"></script>
         <script src="/static/js/bootstrap.js"></script>
         <script src="/static/js/bootstrap-switch.min.js"></script>
+        <script src="/static/js/angular-bootstrap-switch.min.js"></script>
+        <script src="/static/js/bootstrap-slider.min.js"></script>
+        <script src="/static/js/slider.js"></script>
         <script src="/static/js/pyfoto.js"></script>
   </body>
 
