--- a/pyfoto/templates/gallery.html
+++ b/pyfoto/templates/gallery.html
@@ -4,17 +4,17 @@
 
     <a href="#/image/{{image.id}}?{{get_filters}}" ng-repeat="image in galleryImages" ng-hide="albumMode">
         <div class="gallery-image"
-             ng-style="{'background-image': 'url(/item/' + image.thumbnail + ')'}"
+             ng-style="{'background-image': 'url(/item/' + image.thumbnail + ')', 'width': imageSize.toString() + 'px', 'height': imageSize.toString() + 'px'}"
              ng-click="openImage(image.id)">
         </div>
     </a>
 
     <div ng-repeat="image in galleryImages" ng-show="albumMode" >
         <div
-             class="gallery-image album-image"
+             class="gallery-image"
              ng-class="{'iselected': image.selected}"
-             ng-style="{'background-image': 'url(/item/' + image.thumbnail + ')'}"
-             ng-click="selectImage(image); getSelected();">
+             ng-style="{'background-image': 'url(/item/' + image.thumbnail + ')', 'width': imageSize.toString() + 'px', 'height': imageSize.toString() + 'px'}"
+             ng-click="selectImage(image);">
         </div>
     </div>
 
@@ -27,7 +27,16 @@
     <div class="search-area" ng-include="'search.html'">
     </div>
 
-    <div class="star-rating" star-rating rating-value="searchRating" ng-hide="albumMode"
+    <div style="width: 100%; height: 40px;">
+        <div style="width:50%; float: left;">
+            <input name="alborgal" bs-switch ng-model="albumMode" type="checkbox" switch-off-text="Gallery" switch-on-text="Multi" switch-size="mini" switch-label="Mode" />
+        </div>
+        <div style="width:50%; float: left;">
+            <slider ng-model="imageSize" min="100" step="50" max="350" value="150" ></slider>
+        </div>
+    </div>
+
+    <div style="width: 100%; height:30px" class="star-rating" star-rating rating-value="searchRating" ng-hide="albumMode"
          data-max="5" on-rating-selected="performRatingSearch(rating)"></div>
 
 
@@ -39,12 +48,20 @@
 
     <div class="tag-cloud" ng-show="albumMode">
         <h4 class="header">Tags</h4>
-        <div style="width: 100%">
-            <input type="checkbox"  name="addordelete" checked ng-model="aorr" class="bootstrap-switch-mini" data-on-text="Add" data-off-text="Remove" data-size="mini" data-label-text="Action" />
+        <div style="width: 100%; height: 30px;">
+            <div style="width:40%; float: left;">
+                <input name="addordelete" bs-switch ng-model="aorr" type="checkbox" switch-off-text="Remove" switch-on-text="Add" switch-size="mini" switch-label="Action" >
+            </div>
+            <div style="width:30%; float: left;">
+                <a style="cursor: pointer;" ng-click="clearSelected()" ng-show="albumMode">Clear Selected</a>
+            </div>
+            <div style="width:30%; float: left;">
+                <a style="cursor: pointer; color: red;" ng-click="deleteSelected()" ng-show="albumMode">Delete</a>
+            </div>
         </div>
 
         <span ng-repeat="tag in globals.tags" class="tag" ng-bind="tag.tag"
-              ng-click="modifySelectedTag(tag)" ></span>
+              ng-click="applyTagOption(tag)" ></span>
     </div>
 
     <div class="count" style="color:white;">
